src/App.css
[contenteditable][placeholder]:empty:before {
    content: attr(placeholder);
    position: absolute;
    color: #c9c9c9;
    background-color: transparent;
}
.notesGrid {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(14rem, 1fr));
    grid-column-gap: 2rem;
    grid-row-gap: 2rem;
}
img {
    width: 100%;
    max-width: inherit;
    height: auto;
    margin: 2rem auto;
    border-radius: 0.4rem;
}
pre {
    color: #ffffff;
    background-color: #1f2937;
    padding: 0.5rem;
    border-radius: 0.2rem;
    margin: 2rem auto;
}

